--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         <h1 class="display-3">HOME</h1>
-        <p class="lead">Esta es una aplicación de comics.</p>
+        <p class="lead">Esta es una aplicación de prueba GML.</p>
     </div>
 
 </div>
